--- a/index.html
+++ b/index.html
@@ -1,44 +1,67 @@
 
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Points Millionnaire</title>
+    <title>Points Millionnaire - Édition Polynésie</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Spline+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+    <script>
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        "primary": "#0db9f2",
+                        "primary-dark": "#0a9acb",
+                        "background-dark": "#101e22",
+                        "surface-dark": "#16272c",
+                        "gold-accent": "#eab308",
+                        "accent-gold": "#FFD700",
+                        "accent-coral": "#FF7F50",
+                    },
+                    fontFamily: {
+                        "display": ["Plus Jakarta Sans", "Spline Sans", "sans-serif"]
+                    }
+                },
+            },
+        }
+    </script>
     <style>
         body {
-            font-family: 'Montserrat', sans-serif;
-            background: radial-gradient(circle at center, #1a1a4d 0%, #050510 100%);
+            font-family: 'Plus Jakarta Sans', sans-serif;
+            background-color: #101e22;
             color: white;
             margin: 0;
             overflow: hidden;
             height: 100vh;
         }
+        .glass-panel {
+            background: rgba(16, 30, 34, 0.7);
+            backdrop-filter: blur(12px);
+            border: 1px solid rgba(13, 185, 242, 0.1);
+        }
+        .gold-gradient-text {
+            background: linear-gradient(to bottom, #fde047, #ca8a04);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
         .hexagon-shape {
             clip-path: polygon(10% 0%, 90% 0%, 100% 50%, 90% 100%, 10% 100%, 0% 50%);
         }
-        @keyframes pulse-gold {
-            0% { box-shadow: 0 0 0 0 rgba(234, 179, 8, 0.4); }
-            70% { box-shadow: 0 0 0 15px rgba(234, 179, 8, 0); }
-            100% { box-shadow: 0 0 0 0 rgba(234, 179, 8, 0); }
-        }
-        .animate-pulse-gold {
-            animation: pulse-gold 2s infinite;
-        }
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #050510;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #1e3a8a;
-            border-radius: 10px;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #facc15;
+        @keyframes shimmer { 100% { transform: translateX(100%); } }
+        .animate-shimmer { animation: shimmer 2s infinite; }
+        
+        .no-scrollbar::-webkit-scrollbar { display: none; }
+        .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+
+        .wood-texture {
+            background-color: #2a1b15;
+            background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), radial-gradient(#3e2b24 10%, transparent 11%);
+            background-size: 20px 20px;
+            box-shadow: inset 0 0 20px rgba(0,0,0,0.8);
         }
     </style>
 <script type="importmap">
@@ -54,7 +77,7 @@
 }
 </script>
 </head>
-<body>
+<body class="bg-background-dark font-display">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
